fixed unreadable text in ended hunt details page

--- a/client/src/app/endedHunts/endedHuntDetails/ended-hunt-details.component.scss
+++ b/client/src/app/endedHunts/endedHuntDetails/ended-hunt-details.component.scss
@@ -14,4 +14,9 @@
   margin-bottom: 20px;
 }
 
-
+.background {
+  background-color: white;
+  @media (prefers-color-scheme: dark) {
+    background-color: white;
+  }
+}
